examples/test/testpolicy4714.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy4714
  namespace: namespace438
spec:
  podSelector:
    matchLabels:
      key22: value21
      key17: value30
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key12: value29
          key11: value17
          key43: value34
      podSelector:
        matchLabels:
          key6: value44
          key35: value44
          key43: value11
